tests/snapshots/error-parser-outside_class_directive-after_class_dir-type_hints.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end
@string "Hello, World!"
@int 42 ; This one is not error, because after finding the first error, the parser will stop and try to find .class
----- STDERR -----
[E-008] Error: unexpected type hint outside class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/after_class_dir/type_hints.rns:5:1 ]
   │
 5 │ @string "Hello, World!"
   │ ───┬───  
   │    ╰───── valid context for @string type hint is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
